--- a/app/src/main/res/layout/row_recipes.xml
+++ b/app/src/main/res/layout/row_recipes.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="300dp">
+    android:layout_height="300dp"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:foreground="?android:attr/selectableItemBackground"
+    card_view:cardCornerRadius="@dimen/unit2"
+    card_view:cardElevation="@dimen/unit3">
 
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="5dp">
-
 
         <ImageView
             android:id="@+id/image"
@@ -16,7 +20,7 @@
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp"
             android:scaleType="fitXY"
-            android:src="@drawable/sweet" />
+            android:src="@drawable/recipe_placeholder" />
 
 
         <TextView
@@ -37,12 +41,42 @@
             android:textColor="@color/white"
             android:textSize="22sp"
             android:textStyle="bold" />
-
-
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal"
+            android:padding="@dimen/unit2">
+
+            <TextView
+                android:id="@+id/recipe_servings"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerVertical="true"
+                android:layout_marginTop="8dp"
+                android:layout_toLeftOf="@+id/servings_image"
+                android:text="@string/steps_count"
+                android:textColor="@color/white"
+                android:textStyle="bold" />
+
+            <ImageView
+                android:id="@+id/servings_image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="6dp"
+                android:layout_toLeftOf="@id/recipe_steps_count"
+                android:padding="5dp"
+                android:src="@drawable/ic_services" />
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentTop="true"
             android:layout_marginBottom="5dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="5dp">
@@ -68,28 +102,9 @@
                 android:src="@drawable/ic_number" />
 
 
-            <TextView
-                android:id="@+id/recipe_servings"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerVertical="true"
-                android:layout_marginTop="8dp"
-                android:layout_toLeftOf="@+id/servings_image"
-                android:text="@string/steps_count"
-                android:textColor="@color/white"
-                android:textStyle="bold" />
 
-            <ImageView
-                android:id="@+id/servings_image"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginRight="6dp"
-                android:layout_toLeftOf="@id/recipe_steps_count"
-                android:padding="5dp"
-                android:src="@drawable/ic_services" />
-
-        </RelativeLayout>
+        </LinearLayout>
     </RelativeLayout>
 
 
-</RelativeLayout>
+</android.support.v7.widget.CardView>
